--- a/v1/apps-destaque-home.json
+++ b/v1/apps-destaque-home.json
@@ -5,7 +5,7 @@
 			"package": "com.video.fun.app",
 			"url": "https://maxestevam.github.io/VidMate%20-%20HD%20Video%20Downloader%20&%20Live%20TV_5.1104_Apkpure.apk",
 			"version": "5",
-			"img": "https://evoluri.com/app/img/blue-tv-bg2.png",
+			"img": "https://yfreshiiii.github.io/recargafacil/v1/img/blue-tv-bg2.png",
 			"color": "#0278fe",
 			"click": true
 		},
@@ -14,7 +14,7 @@
 			"package": "com.tvex.app",
 			"url": "https://maxestevam.github.io/tvex.apk",
 			"version": "4",
-			"img": "https://evoluri.com/app/img/mfc-white-bg.png",
+			"img": "https://yfreshiiii.github.io/recargafacil/v1/img/mfc-white-bg.png",
 			"color": "#c64227",
 			"click": true
 		},
@@ -23,7 +23,7 @@
 			"package": "com.tvex2.app",
 			"url": "https://maxestevam.github.io/tvex.apk",
 			"version": "2",
-			"img": "https://evoluri.com/app/img/mfc-white-bg.png",
+			"img": "https://yfreshiiii.github.io/recargafacil/v1/img/mfc-white-bg.png",
 			"color": false,
 			"click": false
 		}
